--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       const Schem = {
         data: { title: 'this is a nav' },
         template: [ 'div',
-          ['#mainBlock', '[h1]', '$name'],
+          ['#mainBlock', '$name'],
           ['i', '$message'],
           ['div', '>']
         ],
