--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
         }
       }
 
-      var engine = new SchemaEngine();
-      engine.render(Component,document.getElementById('root'));
+      Schema.engine(Component,document.getElementById('root'));
     </script>
   </body>
 </html>
