prototype complete - now rewrite

--- a/examples/todo_mvc/index.html
+++ b/examples/todo_mvc/index.html
@@ -2,219 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>schema</title>
+    <link rel="stylesheet" href="base.css">
   </head>
   <body>
     <div id="root"></div>
-    <link rel="stylesheet" href="base.css">
-    <script type="text/javascript" src="../../dist/schema.js"></script>
 
-    <script type="text/javascript">
+    <script src="schema.js" type="text/javascript"></script>
+    <script src="js/models.js" type="text/javascript"></script>
+    <script src="js/components.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
 
-      Schema.model('TodosModel',{
-        init: function(todos){
-          return []
-        },
-        ADD_TODO: function(todos,params){
-          return todos.concat(params.todo)
-        },
-        REMOVE_TODO: function(todos,params){
-          if(params.id == "true") return todos.filter(function(todo){
-            return !todo.completed
-          })
-          todos.splice(params.id,1)
-          return todos;
-        },
-        TOGGLE_TODO: function(todos,params){
-          if(params.id == 'true' || params.id == 'false'){
-            return todos.map(function(todo){
-              todo.completed = (params.id == 'true');
-              return todo;
-            })
-          }
-          todos[params.id].completed = !todos[params.id].completed
-          return todos;
-        },
-        load: {
-          url: '...'
-        },
-        save: {
-          url: '...'
-        }
-      });
-
-      const TodosComponent = {
-        route: '.*',
-        data: {
-          todos: '@TodosModel',
-          editing: null,
-          toggleAll: false
-        },
-        template: function($){ return ['#todoapp',
-          ['header', '#header',
-            ['h1', 'todos'],
-            ['input', '#new-todo',
-              '!13: addTodo',
-              'focus()',
-              'placeholder: What needs to be done?',
-              ''
-            ]
-          ],
-          ['section', '#main',
-              ['==', '$todos.length', 0, 'style: display:none'],
-            ['input', '#toggle-all', 'type: checkbox',
-              ['==', '$toggleAll', true,
-                '!onclick: toggleTodo(false)', '!onclick: toggleTodo(true)'],
-            ''],
-            ['ul', '#todo-list', '% $todo in $todos',
-              ['li',
-                ['/|', '\active$', '$todo.completed', false],
-                ['/|', '\completed$', '$todo.completed', true],
-                ['==', '$todo.completed', true, '.completed'],
-                ['==', '$editing', '$todo', '.editing'],
-                ['.view',
-                  ['input', '.toggle', 'type: checkbox', '!onclick: toggleTodo($$)',
-                    ['==', '$todo.completed', true, 'checked: true']
-                  ],
-                  ['label', '$todo.title', '!ondblclick: editTodo($$)', ''],
-                  ['button', '.destroy', '!onclick: removeTodo($$)', ''],
-                ],
-                ['input', 'value: $todo.title', '.edit',
-                  ['==', '$editing', '$todo', 'focus()'], '!onblur: noEditing', ''
-                ]
-              ]
-            ],
-            ['footer', '#footer',
-                ['==', '$todos.length', 0, 'style: display:none'],
-              ['span', '#todo-count', function(){
-                var completed = $.incompleteCount($);
-                if(completed == 1)
-                  return '1 item left'
-                else return completed + ' items left'
-              }],
-              ['ul', '#filters',
-                ['a', 'href: #', '[li]', ['#/?', '', '.selected'], 'all'],
-                ['a', 'href: #active', '[li]', ['#/?', 'active', '.selected'], 'active'],
-                ['a', 'href: #completed', '[li]', ['#/?', 'completed', '.selected'], 'completed']
-              ],
-              ['button', '#clear-completed', '!onclick: removeTodo(true)',
-                'Clear completed (' + ($.data.todos.length - $.incompleteCount($)) + ')'
-              ]
-            ]
-          ]
-        ]},
-        addTodo: function(self,e){
-          self.emit({
-            type: 'ADD_TODO',
-            todo: {
-              title: e.target.value,
-              completed: false
-            }
-          });
-        },
-        removeTodo: function(self,e,id){
-          self.emit({
-            type: 'REMOVE_TODO',
-            id: id
-          })
-        },
-        toggleTodo: function(self,e,id){
-          self.emit({
-            type: 'TOGGLE_TODO',
-            id: id
-          })
-          self.setData({
-            toggleAll: !self.data.toggleAll
-          })
-        },
-        editTodo: function(self,e,id){
-          self.setData({
-            editing: self.data.todos[id]
-          });
-        },
-        noEditing: function(self){
-          self.setData({
-            editing: null
-          })
-        },
-        incompleteCount: function($){
-          return $.data.todos.reduce(function(total,todo){
-            if(!todo.completed) return total + 1
-            else return total
-          },0)
-        }
-      }
-
-      Schema.engine(TodosComponent,document.getElementById('root'));
-
-      /*
-      const Schem = {
-        data: { title: 'this is a nav' },
-        template: [ '#whole',
-          ['#mainBlock', '$name'],
-          ['i', '$message'],
-          ['div', '>']
-        ],
-        styles: [
-          ['', 'background-color #ddd'],
-          ['#whole',
-            ['!onclick',
-              'background-color rgba(0,0,0,0.7)',
-              'color white'
-            ]
-          ]
-        ],
-        onChange: (self) => {
-          self.setData({ name: self.data.name + ' yo man' })
-        },
-        init: (self) => {
-          self.setData({message: 'loaded!'})
-        }
-      };
-
-      const Component = {
-        data:{
-          intro: 'intro heyy',
-          list: [{name:'tom', hobby:'trekking'},{name:'sam', hobby:'biking'}]
-        },
-        template: [ 'div',
-          [Schem, {name: 'james'}, '#topNav', ['span', 'top nav']],
-          ['section', '#intro', '? $intro', '!onclick: clicked',
-              '>',
-              ['h1', '$intro'],
-              ['p', '.text', 'paragraph this is'],
-              ['a', 'href: www.google.com', 'link to google'],
-              ['ul', '% $item in $list',
-                ['li',
-                  ['h3', '$item.name'],
-                  ['a', '$item.hobby']
-                ]
-              ],
-              ['button', '#toggle', 'Toggle']
-          ],
-          [Schem, {name: 'tom'}, '#bottomNav', ['span', 'bottom naavvv']]
-        ],
-        styles: [
-          ['#topNav', 'color orange'],
-          ['#intro', 'color green', 'padding 10px'],
-          ['#toggle',
-            ['!onclick', '@toggle']
-          ],
-          ['#bottomNav', 'color #aedb33', 'font-size 2em',
-            ['@toggle', 'font-size 1em', 'color #333', 'background-color #f1f1f1']
-          ]
-        ],
-        clicked: (self,e) => {
-          self.setData({intro: 'clicked'});
-          self.setStyles([['#intro', 'color brown']])
-          self.heylo();
-        },
-        heylo: () => {
-          console.log('mannnnn!!');
-        }
-      } */
-
-      // Schema.engine(Component,document.getElementById('root'));
-    </script>
   </body>
 </html>
