--- a/examples/todo_mvc/index.html
+++ b/examples/todo_mvc/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
 
-    <script src="schema.js" type="text/javascript"></script>
+    <script src="../../dist/schema.js" type="text/javascript"></script>
     <script src="js/models.js" type="text/javascript"></script>
     <script src="js/components.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
