--- a/rebuild/index.html
+++ b/rebuild/index.html
@@ -7,6 +7,7 @@
   <body>
     <div id="root"></div>
     <script type="text/javascript" src="schema.js"></script>
+    <script type="text/javascript" src="tests.js"></script>
 
   </body>
 </html>
