--- a/tests/index.html
+++ b/tests/index.html
@@ -1,24 +1,13 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>schema</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="text/javascript" src="../dist/schema.js"></script>
+    <script type="text/javascript" src="tests.js"></script>
 
-	<head>
-	  <meta charset="utf-8">
-	  <title>Test Runner</title>
-	</head>
-
-	 <body>
-
-		<div id="root" style="display:none"></div>
-
-	 	<link rel="shortcut icon" type="image/png" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine_favicon.png">
-		<link rel="stylesheet" type="text/css" href="../node_modules/jasmine-core/lib/jasmine-core/jasmine.css">
-
-		<script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-		<script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
-		<script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
-
-		<script type="text/javascript" src="../dist/schema.js"></script>
-		<script type="text/javascript" src="spec.js"></script>
-	 </body>
-
- </html>
+  </body>
+</html>
