--- a/spec/index.html
+++ b/spec/index.html
@@ -14,7 +14,7 @@
 		<script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
 		<script type="text/javascript" src="../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
 
-		<script type="text/javascript" src="../dist/schema.js"></script>
+		<script type="text/javascript" src="../dist/flow.js"></script>
 		<script type="text/javascript" src="spec.js"></script>
 	 </body>
 
